# HTGR-Simulator

./: README.md  main.py  pyproject.toml  requirements.txt
config/: brayton.yaml  heat_rejection.yaml  rankine.yaml  reactor.yaml  simulation.yaml
data/: literature_data.csv
src/: brayton_cycle.py  heat_rejection_system.py  rankine_cycle.py  reactor.py  simulation.py
tests/: test_brayton.py  verify_brayton.ipynb  verify_plant.ipynb
