[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HTGR-SIMULATOR"
version = "0.1.0"
description = "HTGR Simulation for Net CO2 Reduction"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "iapws",
    "PyYAML"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8"
]

[tool.black]
line-length = 79

[tool.setuptools.packages.find]
where = ["."]